--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
   <!-- Styles -->
-  <link rel="stylesheet" href="/AI folder/style.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Favicon (optional) -->
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='128' height='128' viewBox='0 0 24 24' fill='%2300e5ff'%3E%3Cpath d='M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2zm1 14h-2v-2h2zm0-4h-2V6h2z'/%3E%3C/svg%3E" />
@@ -306,6 +306,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="/AI folder/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
